welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:22: error: value Yellow is not a member of object java.awt.Color
	faireV(Color.Yellow);
                     ^