welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
def faireV(c:Color){
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	avance();
	gauche();
	avance();
	baisseBrosse();
	leveBrosse();
	droite();
	avance();
	droite();
	avance();
	baisseBrosse();
	leveBrosse;
	}
avance();
def faireMotif() {
for (v <- 1 to 4) {
	faireV(Color.Yellow);
	gauche();
	avance();
	gauche();
	avance();
	faireV(Color.red);
	gauche();
	avance();
	gauche();
	avance();
	faireV(Color.blue);
	gauche();
	avance();
	gauche();
	avance();
	faireV(Color.green);
	gauche();
	avance();
	gauche();
	avance();
	
}
for (p <- 1 to 3) {
	avance();
}
}
for (motif <- 1 to 3) {

for (bas <-1 to 3) {
	faireMotif();
		avance(); 
	}
gauche()
for (pas <- 1 to 5) {
	(avance());
}
droite();
}	
}
